# HurricaneX

./: .gitignore  README.md  TODOLIST.md  go.mod  go.sum  meson.build  meson_options.txt  plan.md
.claude/: settings.local.json
.github/workflows/: ci.yml
.plan/: rx-lifecycle.md
api/proto/: hurricane.pb.go  hurricane.proto  hurricane_grpc.pb.go
cmd/hurricane/: main.go
cmd/hurricane-ctl/: main.go
configs/: hurricane.yaml
docs/: conventions.md
engine/: meson.build
engine/include/hurricane/: common.h  config.h  conn_table.h  dpdk.h  engine.h  http.h  log.h  mbuf_cache.h  mempool.h  net.h  pktio.h  socket.h  socket_table.h  tcp.h  tls.h  work_space.h
engine/src/: common.c  config.c  conn_table.c  dpdk_init.c  engine.c  http.c  log.c  mbuf_cache.c  mempool.c  net.c  pktio.c  pktio_dpdk.c  pktio_mock.c  pktio_xdp.c  socket.c  tcp.c  tls.c  work_space.c
engine/tests/: bench_http.c  bench_l4.c  meson.build  smoke_dpdk.c  smoke_tx.c  test_conn_table.c  test_http.c  test_log.c  test_mbuf_cache.c  test_mempool.c  test_net.c  test_pktio.c  test_socket.c  test_tcp.c  test_tls.c  test_work_space.c
internal/config/: config.go  config_test.go
internal/grpc/auth/: mtls.go
internal/grpc/errors/: errors.go
internal/grpc/interceptors/: logging.go  metrics.go  recovery.go
internal/grpc/server/: server.go
internal/grpc/services/: metrics_service.go  metrics_service_test.go  node_service.go  node_service_test.go  task_service.go  task_service_test.go
internal/logger/: context.go  logger.go  logger_test.go
internal/metrics/: metrics.go  metrics_test.go
internal/preflight/: preflight.go  preflight_test.go
internal/scheduler/: scheduler.go  scheduler_test.go
